# mandelbrot-numerics

./: .gitignore  README.md  mandelbrot-numerics.cabal
c/include/: mandelbrot-numerics.h
c/lib/: Makefile  m_d_box_period.c  m_d_domain_size.c  m_d_exray_in.c  m_d_exray_out.c  m_d_interior.c  m_d_interior_de.c  m_d_mat2.c  m_d_misiurewicz.c  m_d_nucleus.c  m_d_parent.c  m_d_shape.c  m_d_size.c  m_d_util.h  m_d_wucleus.c  m_r_box_period.c  m_r_domain_size.c  m_r_exray_in.c  m_r_interior.c  m_r_nucleus.c  m_r_parent.c  m_r_shape.c  m_r_size.c  m_r_wucleus.c
c/lib/pkgconfig/: mandelbrot-numerics.pc.in
hs/lib/Mandelbrot/: Numerics.hs
hs/lib/Mandelbrot/Numerics/: BoxPeriod.hs  Child.hs  Complex.hs  DomainSize.hs  Interior.hs  Misiurewicz.hs  Nucleus.hs  Parent.hs  Progress.hs  Shape.hs  Size.hs  Wucleus.hs
hs/test/: mandelbrot-numerics-tests.hs
include/: mandelbrot-numerics.h
lib/: Makefile  m_d_box_period.c  m_d_domain_size.c  m_d_exray_in.c  m_d_exray_out.c  m_d_interior.c  m_d_misiurewicz.c  m_d_nucleus.c  m_d_parent.c  m_d_shape.c  m_d_size.c  m_d_wucleus.c
