name:                mandelbrot-numerics
version:             0.1.0.0
synopsis:            numeric algorithms related to the Mandelbrot set
description:         Numeric algorithms related to the Mandelbrot set:
                     ray tracing, nucleus location, bond points, etc.
homepage:            https://gitorious.org/mandelbrot
license:             GPL-3
license-file:        COPYING
author:              Claude Heiland-Allen
maintainer:          claude@mathr.co.uk
copyright:           (c) 2015 Claude Heiland-Allen
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

library
  exposed-modules:
    Mandelbrot.Numerics,
    Mandelbrot.Numerics.BoxPeriod,
    Mandelbrot.Numerics.Child,
    Mandelbrot.Numerics.Complex,
    Mandelbrot.Numerics.DomainSize,
--    Mandelbrot.Numerics.ExRayIn,
--    Mandelbrot.Numerics.ExRayOut,
    Mandelbrot.Numerics.Interior,
    Mandelbrot.Numerics.Misiurewicz,
    Mandelbrot.Numerics.Nucleus,
    Mandelbrot.Numerics.Parent,
    Mandelbrot.Numerics.Progress,
    Mandelbrot.Numerics.Shape,
    Mandelbrot.Numerics.Size,
    Mandelbrot.Numerics.Wucleus
  other-extensions:
    BangPatterns,
    FlexibleContexts
  build-depends:
    base   >=4.7 && <4.9,
    strict >=0.3 && <0.4
  hs-source-dirs:      hs/lib
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: git://gitorious.org/mandelbrot/mandelbrot-numerics.git

source-repository this
  type:     git
  location: git://gitorious.org/mandelbrot/mandelbrot-numerics.git
  tag:      v0.1.0.0
